build(deps): update to spring boot 4.0